--- a/AuthSystem/Areas/Identity/Pages/Chat/ChatRooms.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Chat/ChatRooms.cshtml
@@ -4,8 +4,7 @@
     ViewData["Title"] = "Chat Rooms";
 }
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="~/css/Chat/ChatRooms.css" />
-
+<link rel="stylesheet" href="~/css/Chat/ChatRooms.css?v=1.0" />
 
 <div class="container">
     <h2>Create New Chat Room</h2>
@@ -46,3 +45,4 @@
         </table>
     </div>
 </div>
+
