--- a/AuthSystem/wwwroot/css/Chat/ChatRooms.css
+++ b/AuthSystem/wwwroot/css/Chat/ChatRooms.css
@@ -7,6 +7,7 @@
     border-radius: 8px;
     border: 2px solid #ccc;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow:hidden;
 }
 
 h2 {
@@ -56,7 +57,7 @@ h2 {
     }
 
 .table-container {
-    max-height: 300px; / Adjust height as needed to display 4 chatrooms */
+    max-height: 300px;
 overflow-y: auto;
 margin-top: 20px;
 border-top: 1px solid #ddd;
