--- a/AuthSystem/wwwroot/css/Chat/privateChat.css
+++ b/AuthSystem/wwwroot/css/Chat/privateChat.css
@@ -1,7 +1,8 @@
 ﻿body, html {
     height: 100%;
     margin: 0;
-    padding: 0;
+    padding-right: 5px;
+    overflow:hidden;
 }
 
 .chat-wrapper {
@@ -51,21 +52,18 @@
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 100%;
+    height: 96%;
+    width:1200px;
 }
 /* Style for the add user form */
 #addUserForm {
-    margin-bottom: 15px; /* Space below the form */
+    margin-bottom: 10px; 
 }
-
-    #addUserForm .form-control {
-        margin-bottom: 10px; /* Space below the input field */
-    }
-
     #addUserForm .btn-secondary {
         background-color: cadetblue;
         color: white;
         border: none;
+        height:38px;
     }
 
         #addUserForm .btn-secondary:hover {
@@ -414,4 +412,25 @@ h3 {
         border-left: none;
         border-top: 1px solid #ddd;
     }
+}
+
+.remove-btn {
+    background: none;
+    border: none;
+    color: #ff0000;
+    cursor: pointer;
+}
+
+.toggle-icon {
+    float: right;
+}
+
+.toggle-button-container{
+    width:10px;
+    height:10px;
+}
+
+.plus-icon{
+   margin: 0;
+   padding:0;
 }
